--- a/myblog/package.json
+++ b/myblog/package.json
@@ -8,8 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^28.1.4",
     "@types/node": "^18.0.0",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
@@ -24,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint './src/**/* {ts,tsx,js,jsx}'",
+    "lint:fix": "eslint './src/**/* {ts,tsx,js,jsx}'"
   },
   "eslintConfig": {
     "extends": [
@@ -45,6 +47,8 @@
     ]
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
