--- a/myblog/tsconfig.json
+++ b/myblog/tsconfig.json
@@ -104,5 +104,5 @@
     "skipLibCheck": true /* Skip type checking all .d.ts files. */,
     "lib": ["DOM", "DOM.Iterable", "ESNext"]
   },
-  "include": ["src/**.tsx"]
+  "include": ["src/**.tsx", "src/**.ts"]
 }
